fixed title banner on mobile

--- a/src/assets/css/next.css
+++ b/src/assets/css/next.css
@@ -1,1 +1,1 @@
-.usa-logo{width:100%;display:flex;gap:10px}.usa-logo img{height:30px;max-width:auto}
+.usa-logo{width:100%;display:flex;gap:10px}.usa-logo img{height:25px;max-width:auto}
